[package]
name = "prusa_screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# screen_backend = { path = "../screen_backend/" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.5", features = ["nightly", "csr"] }
